--- a/src/Apple.AppKit/Makefile
+++ b/src/Apple.AppKit/Makefile
@@ -1,7 +1,7 @@
 all: ../../build/Apple.AppKit.dll
 
 ../../build/Apple.AppKit.dll: *.cs ../../build/Apple.Foundation.dll
-	mcs -g *.cs -target:library -out:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
+	mcs -nowarn:0108 -g *.cs -target:library -out:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
 
 maintainer-clean: clean
 
