--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS=AppKit.Glue WebKit.Glue Foundation.Glue Apple.Foundation Apple.AppKit
+SUBDIRS=AppKit.Glue WebKit.Glue Foundation.Glue Apple.Foundation Apple.AppKit Apple.WebKit
