Avoid make errors
svn path=/trunk/cocoa-sharp/; revision=30372

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,9 +1,9 @@
 all: generator.exe generator.run
 
 generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs
-	rm ../src/Apple.Foundation/*.cs
-	rm ../src/Apple.WebKit/*.cs
-	rm ../src/Apple.AppKit/*.cs
+	rm -f ../src/Apple.Foundation/*.cs
+	rm -f ../src/Apple.WebKit/*.cs
+	rm -f ../src/Apple.AppKit/*.cs
 	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs -out:generator.exe
 
 generator.run: generator.exe
