Handle char* as argument and return value
svn path=/trunk/cocoa-sharp/; revision=30399

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -9,6 +9,9 @@ generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Pro
 generator.run: generator.exe
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch generator.run
 
+cs: generator.exe
+	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS)
+
 clean:
 	rm generator.exe generator.run
 
