Implement latest name bindings changes, and using objective-c reflection to see is a type is a OC class
svn path=/trunk/cocoa-sharp/; revision=30484

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -3,11 +3,11 @@ all: generator.exe generator.run
 Foundation: /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation
 	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Foundation
 
-generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs
+generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs ObjCClassInspector.cs
 	rm -f ../src/Apple.Foundation/*.cs
 	rm -f ../src/Apple.WebKit/*.cs
 	rm -f ../src/Apple.AppKit/*.cs
-	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs -out:generator.exe
+	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs ObjCClassInspector.cs -out:generator.exe
 
 generator.run: generator.exe Foundation
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch generator.run
