--- a/generator/ObjCManagedExport.csproj
+++ b/generator/ObjCManagedExport.csproj
@@ -134,6 +134,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ObjCClassInspector.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Protocol.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
