- Better verbose support, individual verbose ignore per selector and per interface - Minor improvements with monodoc
svn path=/trunk/cocoa-sharp/; revision=30617

--- a/generator/Makefile
+++ b/generator/Makefile
@@ -13,7 +13,7 @@ generator.run: generator.exe Foundation
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch generator.run
 
 cs: generator.exe Foundation
-	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS)
+	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS) && touch generator.run
 
 clean:
 	rm -f generator.exe generator.run Foundation
