Fix some GC issues, but mostly just do stuff more explicit Still not working with GC on
svn path=/trunk/cocoa-sharp/; revision=30623

--- a/monodoc/Makefile.am
+++ b/monodoc/Makefile.am
@@ -24,7 +24,10 @@ run-gc:
 	./monodoc.app/Contents/MacOS/monodoc
 
 debug:
-	gdb --args ./monodoc.app/Contents/MacOS/monodoc
+	gdb --args ./monodoc.app/Contents/MacOS/monodoc --debug Test.exe
+
+debug-dump:
+	GC_DUMP_REGULARLY=1 GC_PRINT_STATS=1 gdb --args ./monodoc.app/Contents/MacOS/monodoc --debug Test.exe
 
 clean:
 	rm -rf monodoc.app
