--- a/generator/Makefile
+++ b/generator/Makefile
@@ -1,7 +1,4 @@
-all: generator.exe generator.run
-
-Foundation: /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Foundation
+all: generator.run
 
 generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs ObjCClassInspector.cs
 	rm -f ../src/Apple.Foundation/*.cs
@@ -9,14 +6,14 @@ generator.exe: Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Pro
 	rm -f ../src/Apple.AppKit/*.cs
 	mcs -g Category.cs CEnum.cs Struct.cs Interface.cs Main.cs Method.cs Protocol.cs Element.cs ObjCClassInspector.cs -out:generator.exe
 
-generator.run: generator.exe Foundation
+generator.run: generator.exe
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch generator.run
 
-cs: generator.exe Foundation
+cs: generator.exe custom/*/*.addin custom/*/*.override custom/*/*.cs
 	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml -out:CS) && touch generator.run
 
 clean:
-	rm -f generator.exe generator.run Foundation
+	rm -f generator.exe generator.run
 
 maintainer-clean: clean
 
