--- a/src/Apple.WebKit/Makefile
+++ b/src/Apple.WebKit/Makefile
@@ -1,4 +1,8 @@
-all: ../../build/Apple.WebKit.dll
+all: ../../build/Apple.WebKit.dll ../../build/Apple.WebKit.dll.config
+
+../../build/Apple.WebKit.dll.config: 
+	cp Apple.WebKit.dll.config ../../build
+
 
 ../../build/Apple.WebKit.dll: *.cs ../../build/Apple.Foundation.dll ../../build/Apple.AppKit.dll
 	mcs -nowarn:0108 -g *.cs -target:library -out:../../build/Apple.WebKit.dll -r:../../build/Apple.AppKit.dll -r:../../build/Apple.Foundation.dll
