--- a/src/WebKit.Glue/Makefile.am
+++ b/src/WebKit.Glue/Makefile.am
@@ -1,16 +1,6 @@
-PROJECT=cocoa-sharp
-VERSION=0.1
+all: ../../build/libWebKitGlue.dylib
 
-lib_LTLIBRARIES=libWebKitGlue.la
-
-libWebKitGlue_la_SOURCES =				\
-	WebBackForwardList_glue.m \
-	WebHistoryItem_glue.m \
-	WebView_glue.m \
-	WebDataSource_glue.m \
-	WebHistory_glue.m \
-	WebFrame_glue.m \
-	WebPreferences_glue.m
-
-libWebKitGlue_la_LDFLAGS = -module -x objective-c -framework Cocoa 
-libWebKitGlue_la_LIBADD = 
+../../build/libWebKitGlue.dylib: WebBackForwardList_glue.m WebHistoryItem_glue.m WebView_glue.m WebDataSource_glue.m WebHistory_glue.m WebFrame_glue.m WebPreferences_glue.m NSObjectWebKitExtras_glue.m
+	gcc -dynamiclib -flat_namespace -undefined suppress -framework Cocoa -o ../../build/libWebKitGlue.dylib WebBackForwardList_glue.m WebHistoryItem_glue.m WebView_glue.m WebDataSource_glue.m WebHistory_glue.m WebFrame_glue.m WebPreferences_glue.m NSObjectWebKitExtras_glue.m
+clean:
+	rm -f ../../build/libWebKitGlue.dylib
