--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS=..
 
-all: Test.exe 2ndTest.exe Loader test-4 test-4.exe libWebKitGlue.dylib
+all: Loader test test2 test-4 test-4.exe CocoaSharpBrowser CocoaSharpFinder
 
 clean:
 	rm -f *.dylib
@@ -12,41 +12,11 @@ clean:
 	rm -f *.so
 	rm -f *.o
 
-CoreFoundation: /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation CoreFoundation
-
-Foundation: /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Foundation
-
-libWebKitGlue.dylib: ../src/WebKit.Glue/*.o
-	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libWebKitGlue.dylib ../src/WebKit.Glue/*.o
-
-libFoundationGlue.dylib: ../src/Foundation.Glue/*.o
-	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libFoundationGlue.dylib ../src/Foundation.Glue/*.o
-
-libAppKitGlue.dylib: ../src/AppKit.Glue/*.o
-	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libAppKitGlue.dylib ../src/AppKit.Glue/*.o
-
-libWebKitGlue.dylib: ../src/WebKit.Glue/*.o
-	gcc -bundle -flat_namespace -undefined suppress -framework Cocoa -o libWebKitGlue.dylib ../src/WebKit.Glue/*.o
-
-libGlue.so: glue.m
-	gcc -g -bundle -flat_namespace -undefined suppress -framework Cocoa -o libGlue.so glue.m
-
-Test.exe: test.cs ../build/Apple.Foundation.dll ../build/Apple.AppKit.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
-	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
-	cp ../build/*.dll .
-
-2ndTest.exe: test-2.cs CSTextControl.cs CSControl.cs libGlue.so ../build/Apple.Foundation.dll ../build/Apple.AppKit.dll libAppKitGlue.dylib libFoundationGlue.dylib Foundation CoreFoundation
-	mcs -g test-2.cs CSTextControl.cs CSControl.cs -out:2ndTest.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll
-	cp ../build/*.dll .
-
 test-4: test-4.c
 	gcc -g -x objective-c test-4.c -o test-4 -dynamiclib -framework Cocoa
 
-test-4.exe: test-4.cs ../build/Apple.Foundation.dll
+test-4.exe: test-4.cs
 	mcs -g test-4.cs -r:../build/Apple.Foundation.dll
-	cp ../build/*.dll .
 
 Loader: Loader.o Bundle.o
 	gcc Bundle.o Loader.o -o Loader -framework Cocoa `pkg-config --libs mono`
@@ -57,80 +27,56 @@ Loader.o: Loader.c
 Bundle.o: Bundle.m
 	gcc -x objective-c -g -c Bundle.m -o Bundle.o
 
-CocoaSharpFinder.exe: CocoaSharpFinder.cs ../build/Apple.Foundation.dll ../build/Apple.WebKit.dll ../build/Apple.AppKit.dll
-	mcs -g CocoaSharpFinder.cs -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:../build/Apple.Foundation.dll
-	cp ../build/*.dll .
-
-CocoaSharpBrowser.exe: CocoaSharpBrowser.cs ../build/Apple.Foundation.dll ../build/Apple.WebKit.dll ../build/Apple.AppKit.dll
-	mcs -g CocoaSharpBrowser.cs -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:../build/Apple.Foundation.dll
-	cp ../build/*.dll .
-
-CocoaSharpFinder: CocoaSharpFinder.exe CocoaSharpFinder.cs Loader libFoundationGlue.dylib libAppKitGlue.dylib libWebKitGlue.dylib Foundation libGlue.so
+CocoaSharpFinder: CocoaSharpFinder.cs Loader
 	rm -Rf CocoaSharpFinder.app
-	mkdir -p CocoaSharpFinder.app/Contents/MacOS
 	mkdir -p CocoaSharpFinder.app/Contents/Resources
+	mcs -g CocoaSharpFinder.cs -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:../build/Apple.Foundation.dll -out:CocoaSharpFinder.app/Contents/Resources/Test.exe
+	mkdir -p CocoaSharpFinder.app/Contents/MacOS
+	cp Loader CocoaSharpFinder.app/Contents/MacOS/CocoaSharpFinder
 	cp ../sample/SimpleWindow/*.icns CocoaSharpFinder.app/Contents/Resources
 	cp CocoaSharpFinder.plist CocoaSharpFinder.app/Contents/Info.plist
-	cp CocoaSharpFinder.exe CocoaSharpFinder.app/Contents/Resources/Test.exe
-	cp *.dll* CocoaSharpFinder.app/Contents/Resources
-	cp *Glue* CocoaSharpFinder.app/Contents/Resources
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation CocoaSharpFinder.app/Contents/Resources/CoreFoundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation CocoaSharpFinder.app/Contents/Resources/Foundation
-	cp Loader CocoaSharpFinder.app/Contents/MacOS/CocoaSharpFinder
+	cp ../build/*.dll* CocoaSharpFinder.app/Contents/Resources
+	cp ../build/*Glue* CocoaSharpFinder.app/Contents/Resources
 
-CocoaSharpBrowser: CocoaSharpBrowser.exe CocoaSharpBrowser.cs Loader libFoundationGlue.dylib libAppKitGlue.dylib libWebKitGlue.dylib Foundation libGlue.so
+CocoaSharpBrowser: CocoaSharpBrowser.cs Loader
 	rm -Rf CocoaSharpBrowser.app
-	mkdir -p CocoaSharpBrowser.app/Contents/MacOS
 	mkdir -p CocoaSharpBrowser.app/Contents/Resources
+	mcs -g CocoaSharpBrowser.cs -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:../build/Apple.Foundation.dll -out:CocoaSharpBrowser.app/Contents/Resources/Test.exe
+	mkdir -p CocoaSharpBrowser.app/Contents/MacOS
+	cp Loader CocoaSharpBrowser.app/Contents/MacOS/CocoaSharpBrowser
 	cp ../sample/SimpleWindow/*.icns CocoaSharpBrowser.app/Contents/Resources
 	cp CocoaSharpBrowser.plist CocoaSharpBrowser.app/Contents/Info.plist
-	cp CocoaSharpBrowser.exe CocoaSharpBrowser.app/Contents/Resources/Test.exe
-	cp *.dll* CocoaSharpBrowser.app/Contents/Resources
-	cp *Glue* CocoaSharpBrowser.app/Contents/Resources
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation CocoaSharpBrowser.app/Contents/Resources/CoreFoundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation CocoaSharpBrowser.app/Contents/Resources/Foundation
-	cp Loader CocoaSharpBrowser.app/Contents/MacOS/CocoaSharpBrowser
+	cp ../build/*.dll* CocoaSharpBrowser.app/Contents/Resources
+	cp ../build/*Glue* CocoaSharpBrowser.app/Contents/Resources
 
-run2: 2ndTest.exe Loader
-	rm -Rf Loader.app
-	mkdir -p Loader.app/Contents/MacOS
-	mkdir -p Loader.app/Contents/Resources
-	cp ../sample/SimpleWindow/*.icns Loader.app/Contents/Resources
-	cp Info.plist Loader.app/Contents/
-	cp 2ndTest.exe Loader.app/Contents/Resources
-	cp *.dll* Loader.app/Contents/Resources
-	cp *Glue* Loader.app/Contents/Resources
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation Loader.app/Contents/Resources/CoreFoundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
-	cp Loader Loader.app/Contents/MacOS
-	./Loader.app/Contents/MacOS/Loader 2ndTest.exe
+test2: test-2.cs CSTextControl.cs CSControl.cs Loader
+	rm -Rf test2.app
+	mkdir -p test2.app/Contents/Resources
+	mcs -g test-2.cs CSTextControl.cs CSControl.cs -out:2ndTest.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll -out:test2.app/Contents/Resources/Test.exe
+	mkdir -p test2.app/Contents/MacOS
+	cp Loader test2.app/Contents/MacOS/Loader
+	cp ../sample/SimpleWindow/*.icns test2.app/Contents/Resources
+	cp Info.plist test2.app/Contents/
+	cp ../build/*.dll* test2.app/Contents/Resources
+	cp ../build/*Glue* test2.app/Contents/Resources
 
-debug2: 2ndTest.exe Loader
-	rm -Rf Loader.app
-	mkdir -p Loader.app/Contents/MacOS
-	mkdir -p Loader.app/Contents/Resources
-	cp ../sample/SimpleWindow/*.icns Loader.app/Contents/Resources
-	cp Info.plist Loader.app/Contents/
-	cp 2ndTest.exe Loader.app/Contents/Resources
-	cp *.dll* Loader.app/Contents/Resources
-	cp *Glue* Loader.app/Contents/Resources
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation Loader.app/Contents/Resources/CoreFoundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
-	cp Loader Loader.app/Contents/MacOS
-	gdb --args ./Loader.app/Contents/MacOS/Loader 2ndTest.exe
+run2: test2
+	./test2.app/Contents/MacOS/Loader
 
-run: Test.exe Loader
-	rm -Rf Loader.app
-	mkdir -p Loader.app/Contents/MacOS
-	mkdir -p Loader.app/Contents/Resources
-	cp ../sample/SimpleWindow/*.icns Loader.app/Contents/Resources
-	cp Info.plist Loader.app/Contents/
-	cp mono.icns Loader.app/Contents/Resources
-	cp Test.exe Loader.app/Contents/Resources
-	cp *.dll* Loader.app/Contents/Resources
-	cp *Glue* Loader.app/Contents/Resources
-	ln -s /System/Library/Frameworks/CoreFoundation.framework/Versions/Current/CoreFoundation Loader.app/Contents/Resources/CoreFoundation
-	ln -s /System/Library/Frameworks/Foundation.framework/Versions/Current/Foundation Loader.app/Contents/Resources/Foundation
-	cp Loader Loader.app/Contents/MacOS
-	./Loader.app/Contents/MacOS/Loader
+debug2: test2
+	gdb --args ./test2.app/Contents/MacOS/Loader
+
+test: test.cs
+	rm -Rf test.app
+	mkdir -p test.app/Contents/Resources
+	mcs -g Test.cs -out:Test.exe -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll -out:test.app/Contents/Resources/Test.exe
+	mkdir -p test.app/Contents/MacOS
+	cp Loader test.app/Contents/MacOS/Loader
+	cp ../sample/SimpleWindow/*.icns test.app/Contents/Resources
+	cp Info.plist test.app/Contents/
+	cp ../build/*.dll* test.app/Contents/Resources
+	cp ../build/*Glue* test.app/Contents/Resources
+
+run: test
+	./test.app/Contents/MacOS/Loader
 
