--- a/monodoc/Makefile
+++ b/monodoc/Makefile
@@ -365,21 +365,18 @@ all: monodoc
 monodoc:
 	rm -Rf monodoc.app
 	mkdir -p monodoc.app/Contents/Resources
-	mcs -debug -out:monodoc.app/Contents/Resources/Test.exe browser.cs Contributions.cs XmlNodeWriter.cs catalog.cs -resource:./monodoc.png,monodoc.png -r:System.Web.Services.dll -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:./monodoc.dll
+	mcs -debug -out:monodoc.app/Contents/Resources/Test.exe browser.cs Contributions.cs XmlNodeWriter.cs catalog.cs -resource:./monodoc.png,monodoc.png -r:System.Web.Services.dll -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:tmp/monodoc.dll
 	mkdir -p monodoc.app/Contents/MacOS
 	cp ../sample/SimpleWindow/*.icns monodoc.app/Contents/Resources
 	cp monodoc.plist monodoc.app/Contents/Info.plist
 	cp ../build/*.dll* monodoc.app/Contents/Resources
 	cp ../build/*Glue* monodoc.app/Contents/Resources
-	cp ../test/Loader monodoc.app/Contents/MacOS/monodoc
-	cp monodoc.dll monodoc.app/Contents/Resources
-	cp -r /usr/local/mono/lib/monodoc/sources monodoc.app/Contents/Resources/sources
-	cp /usr/local/mono/lib/monodoc/monodoc.xml monodoc.app/Contents/Resources
+	cp ../build/CocoaSharpLoader monodoc.app/Contents/MacOS/monodoc
+	cp tmp/monodoc.dll monodoc.app/Contents/Resources
+	cp -r tmp/sources monodoc.app/Contents/Resources/sources
+	cp tmp/monodoc.xml monodoc.app/Contents/Resources
 
 run:
-	GC_DONT_GC=1 ./monodoc.app/Contents/MacOS/monodoc
-
-run-gc:
 	./monodoc.app/Contents/MacOS/monodoc
 
 debug:
