--- a/monodoc/monodoc.plist
+++ b/monodoc/monodoc.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIdentifier</key>
+	<string>monodoc</string>
 	<key>CFBundleExecutable</key>
 	<string>monodoc</string>
         <key>CFBundleIconFile</key>
