--- a/src/Foundation.Glue/Makefile.am
+++ b/src/Foundation.Glue/Makefile.am
@@ -5,3 +5,6 @@ all: ../../build/libFoundationGlue.dylib
 
 clean:
 	rm -f ../../build/libFoundationGlue.dylib
+
+install-data-local:
+	if test -n '@prefix@/lib/libFoundationGlue.dylib'; then  cp ../../build/libFoundationGlue.dylib @prefix@/lib/libFoundationGlue.dylib; fi 
