--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #
 #  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
 #
-#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.9 2004/07/28 16:58:16 gnorton Exp $
+#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.10 2004/07/28 17:10:58 gnorton Exp $
 #
 
 AC_INIT(README)
@@ -86,6 +86,7 @@ AC_SUBST(GLIB2_PREFIX)
 AC_SUBST(GLIB2_CFLAGS)
 
 AC_OUTPUT([
+cocoa-sharp.pc
 Makefile
 monodoc/Makefile
 test/Makefile
@@ -103,6 +104,9 @@ src/Apple.WebKit/Makefile
 #***************************************************************************
 #
 # $Log: configure.in,v $
+# Revision 1.10  2004/07/28 17:10:58  gnorton
+# Add cocoa-sharp.pc to make things easier for pkg-config folks (mcs -pkg:cocoa-sharp) works now.
+#
 # Revision 1.9  2004/07/28 16:58:16  gnorton
 # Build system updates so that we have the ability to actually install
 # (no gac for now)
