Updated Makefile to create CurrencyConverter instead of test/monodoc application because it really is a CurrencyConverter and not monodoc...
Also added local Info.plist so that it could be customized for the CurrentConverter

svn path=/trunk/cocoa-sharp/; revision=31617

--- a/test/nib/Makefile
+++ b/test/nib/Makefile
@@ -1,5 +1,5 @@
 BUILD=../../build
-APP=test.app
+APP=CurrencyConverter.app
 
 all: test
 
@@ -9,11 +9,11 @@ test: nib-test.cs
 	mcs nib-test.cs -out:$(APP)/Contents/Resources/Test.exe -r:$(BUILD)/Apple.Foundation.dll -r:$(BUILD)/Apple.AppKit.dll
 	mkdir -p $(APP)/Contents/MacOS
 	cp ../../sample/SimpleWindow/*.icns $(APP)/Contents/Resources
-	cp ../../monodoc/monodoc.plist $(APP)/Contents/Info.plist
+	cp ./Info.plist $(APP)/Contents/Info.plist
 	cp $(BUILD)/*.dll* $(APP)/Contents/Resources
 	cp $(BUILD)/*Glue* $(APP)/Contents/Resources
-	cp $(BUILD)/CocoaSharpLoader $(APP)/Contents/MacOS/monodoc
+	cp $(BUILD)/CocoaSharpLoader $(APP)/Contents/MacOS/CurrencyConverter
 	cp -r step3-MainMenu.nib $(APP)/Contents/Resources
 
 run: test
-	./$(APP)/Contents/MacOS/monodoc
+	./$(APP)/Contents/MacOS/CurrencyConverter
