--- a/test/nib/Makefile
+++ b/test/nib/Makefile
@@ -1,4 +1,5 @@
-BUILD=../../build
+LIB=/Library/Frameworks/CocoaSharp.framework/Libraries
+BIN=/Library/Frameworks/CocoaSharp.framework/Commands
 APP=CurrencyConverter.app
 
 all: test
@@ -6,13 +7,13 @@ all: test
 test: CurrencyConverter.cs
 	rm -Rf $(APP)
 	mkdir -p $(APP)/Contents/Resources
-	mcs CurrencyConverter.cs -out:$(APP)/Contents/Resources/Test.exe -r:$(BUILD)/Apple.Foundation.dll -r:$(BUILD)/Apple.AppKit.dll
+	mcs CurrencyConverter.cs -out:$(APP)/Contents/Resources/Test.exe -r:$(LIB)/Apple.Foundation.dll -r:$(LIB)/Apple.AppKit.dll
 	mkdir -p $(APP)/Contents/MacOS
-	cp ../../sample/SimpleWindow/*.icns $(APP)/Contents/Resources
+	cp ./mono.icns $(APP)/Contents/Resources
 	cp ./Info.plist $(APP)/Contents/Info.plist
-	cp $(BUILD)/*.dll* $(APP)/Contents/Resources
-	cp $(BUILD)/*Glue* $(APP)/Contents/Resources
-	cp $(BUILD)/CocoaSharpLoader $(APP)/Contents/MacOS/CurrencyConverter
+	cp $(LIB)/*.dll* $(APP)/Contents/Resources
+	cp $(LIB)/*Glue* $(APP)/Contents/Resources
+	cp $(BIN)/CocoaSharpLoader $(APP)/Contents/MacOS/CurrencyConverter
 	cp -r CurrencyConverter.nib $(APP)/Contents/Resources
 
 run: test
